--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             <div class="destination" id="barcelona">
                 <h2>Sao Paolo</h2>
             </div>
+            <div class="destination" id="Colombia">
+                <h2>Colombia</h2>
+            </div>
+            <div class="destination" id="barcelona">
+                <h2>United States</h2>
+            </div>
         </div>
     </div>
 
