add color boxes

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <div class="destination" id="barcelona">
                 <h2>Sao Paolo</h2>
             </div>
-            <div class="destination" id="Colombia">
+            <div class="destination" id="colombia">
                 <h2>Colombia</h2>
             </div>
-            <div class="destination" id="barcelona">
+            <div class="destination" id="united-states">
                 <h2>United States</h2>
             </div>
         </div>
