--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <div class="destination" id="united-states">
                 <h2>United States</h2>
             </div>
+            <div class="destination" id="scotland">
+                <h2>Scotland</h2>
+            </div>
         </div>
     </div>
 
